feat: integrate Firebase Admin SDK and verify build